# openscience

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  compute.md  development.md  reproducibility.md  security.md  tools.md
scripts/: build-sidecar.mjs  dev.mjs
sidecar/: frozen_entry.py  mock_openai.py  pyproject.toml
sidecar/sidecar/: __init__.py  __main__.py  http.py  server.py
sidecar/sidecar/compute/: base.py  local.py  ssh.py
sidecar/sidecar/llm/: client.py  react.py  reviewer.py
sidecar/sidecar/repro/: recorder.py
sidecar/sidecar/tools/: alphafold.py  chembl.py  clinvar.py  code.py  compute.py  crossref.py  ensembl.py  entrez.py  europepmc.py  geo.py  pdb.py  pubmed.py  registry.py  uniprot.py
sidecar/tests/: test_code.py  test_compute.py  test_manuscript.py  test_react.py  test_recorder.py  test_server.py  test_tools_databases.py  test_v03.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/components/: ChatPanel.tsx  ManuscriptPanel.tsx  RunHistory.tsx  RunInspector.tsx  SettingsModal.tsx  ViewerPanel.tsx
src/components/viewers/: ChemViewer.tsx  FigureViewer.tsx  GenomeViewer.tsx  ProteinViewer.tsx
src/lib/: api.ts  types.ts
src/stores/: session.ts
src/tests/: sse.test.ts
